welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
	if (a+b = (2 * a)) {
             ^sumDouble:2: error: type mismatch;
 found   : Unit
 required: Integer
	if (a+b = (2 * a)) {
        ^